changed css paths

--- a/war/project/index.html
+++ b/war/project/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title> Student Management </title>
-<link rel="stylesheet" href="_css/bodycss.css">
-<link rel="stylesheet" href="_css/headercss.css">
-<link rel="stylesheet" href="_css/footercss.css">
+<link rel="stylesheet" href="../css/bodycss.css">
+<link rel="stylesheet" href="../css/headercss.css">
+<link rel="stylesheet" href="../css/footercss.css">
 </head>
 <!-- Header div -->
 <header>
