Changed Placeholder etc (Sensei's comments)

--- a/war/project/assignment_student.html
+++ b/war/project/assignment_student.html
@@ -175,7 +175,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <center><input type="submit" value="Add Students"/></center>
+                    <center><input class="btn btn-success" type="submit" value="Add Students"/></center>
                     <br/>
                 </div>
                 <!-- End Main Content -->                
