--- a/war/project/class_record_view.html
+++ b/war/project/class_record_view.html
@@ -147,11 +147,7 @@
                                     <tr>
                                         <th style="width: 10%;">Student Name</th>
                                         <th class="hidden-xs" style="width: 3%;">Q1</th>
-                                        <th class="hidden-xs" style="width: 3%;">Q2</th>
-                                        <th class="hidden-xs" style="width: 3%;">Q3</th>
                                         <th class="hidden-xs" style="width: 3%;">SW1</th>
-                                        <th class="hidden-xs" style="width: 3%;">SW2</th>
-                                        <th class="hidden-xs" style="width: 3%;">SW3</th>
                                         <th class="hidden-xs" style="width: 3%;">Proj</th>
                                         <th class="text-center" style="width: 5%;">Grade</th>
                                         <th class="text-center" style="width: 5%;">Actions</th>
@@ -161,10 +157,6 @@
                                     <tr>
                                         <th>Max Score</th>
                                         <th>30</th>
-                                        <th>30</th>
-                                        <th>25</th>
-                                        <th>10</th>
-                                        <th>20</th>
                                         <th>10</th>
                                         <th>100</th>
                                         <th></th>
@@ -173,11 +165,7 @@
                                     <tr>
                                         <td>JDar Sigfreid Rodriguez</td>
                                         <td><input type="number" min="0" max="30" name="Q1"/ value="30" size="3"></td>
-                                        <td><input type="number" min="0" max="30"  name="Q2"/ value="29" size="3"></td>
-                                        <td><input type="number" min="0" max="25"  name="Q3"/ value="24" size="3"></td>
                                         <td><input type="number" min="0" max="10"  name="SW1"/ value="10" size="3"></td>
-                                        <td><input type="number" min="0" max="20"  name="SW2"/ value="19" size="3"></td>
-                                        <td><input type="number" min="0" max="10"  name="SW3"/ value="6" size="3"></td>
                                         <td><input type="number" min="0" max="100"  name="Proj"/ value="95" size="3"></td>
                                         <td id="center-green">4.9</td>
                                         <td class="text-center">
@@ -190,11 +178,7 @@
                                     <tr>
                                         <td>Sheila Batistil</td>
                                         <td><input type="number" min="0" max="30" name="Q1"/ value="30" size="3"></td>
-                                        <td><input type="number" min="0" max="30"  name="Q2"/ value="29" size="3"></td>
-                                        <td><input type="number" min="0" max="25"  name="Q3"/ value="24" size="3"></td>
                                         <td><input type="number" min="0" max="10"  name="SW1"/ value="10" size="3"></td>
-                                        <td><input type="number" min="0" max="20"  name="SW2"/ value="19" size="3"></td>
-                                        <td><input type="number" min="0" max="10"  name="SW3"/ value="6" size="3"></td>
                                         <td><input type="number" min="0" max="100"  name="Proj"/ value="95" size="3"></td>
                                         <td id="center-green">4.9</td>
                                         <td class="text-center">
@@ -207,11 +191,7 @@
                                     <tr>
                                         <td>Dale Palacio</td>
                                         <td><input type="number" min="0" max="30" name="Q1"/ value="30" size="3"></td>
-                                        <td><input type="number" min="0" max="30"  name="Q2"/ value="29" size="3"></td>
-                                        <td><input type="number" min="0" max="25"  name="Q3"/ value="24" size="3"></td>
                                         <td><input type="number" min="0" max="10"  name="SW1"/ value="10" size="3"></td>
-                                        <td><input type="number" min="0" max="20"  name="SW2"/ value="19" size="3"></td>
-                                        <td><input type="number" min="0" max="10"  name="SW3"/ value="6" size="3"></td>
                                         <td><input type="number" min="0" max="100"  name="Proj"/ value="95" size="3"></td>
                                         <td id="center-green">4.9</td>
                                         <td class="text-center">
@@ -224,11 +204,7 @@
                                     <tr>
                                         <td>Miqueas Cagot</td>
                                         <td><input type="number" min="0" max="30" name="Q1"/ value="30" size="3"></td>
-                                        <td><input type="number" min="0" max="30"  name="Q2"/ value="29" size="3"></td>
-                                        <td><input type="number" min="0" max="25"  name="Q3"/ value="24" size="3"></td>
                                         <td><input type="number" min="0" max="10"  name="SW1"/ value="10" size="3"></td>
-                                        <td><input type="number" min="0" max="20"  name="SW2"/ value="19" size="3"></td>
-                                        <td><input type="number" min="0" max="10"  name="SW3"/ value="6" size="3"></td>
                                         <td><input type="number" min="0" max="100"  name="Proj"/ value="95" size="3"></td>
                                         <td id="center-green">4.9</td>
                                         <td class="text-center">
@@ -241,11 +217,7 @@
                                     <tr>
                                         <td>Julie Alegre</td>
                                         <td><input type="number" min="0" max="30" name="Q1"/ value="30" size="3"></td>
-                                        <td><input type="number" min="0" max="30"  name="Q2"/ value="29" size="3"></td>
-                                        <td><input type="number" min="0" max="25"  name="Q3"/ value="24" size="3"></td>
                                         <td><input type="number" min="0" max="10"  name="SW1"/ value="10" size="3"></td>
-                                        <td><input type="number" min="0" max="20"  name="SW2"/ value="19" size="3"></td>
-                                        <td><input type="number" min="0" max="10"  name="SW3"/ value="6" size="3"></td>
                                         <td><input type="number" min="0" max="100"  name="Proj"/ value="95" size="3"></td>
                                         <td id="center-green">4.9</td>
                                         <td class="text-center">
@@ -258,11 +230,7 @@
                                     <tr>
                                         <td>Bryan Agustine Cabansay</td>
                                         <td><input type="number" min="0" max="30" name="Q1"/ value="30" size="3"></td>
-                                        <td><input type="number" min="0" max="30"  name="Q2"/ value="29" size="3"></td>
-                                        <td><input type="number" min="0" max="25"  name="Q3"/ value="24" size="3"></td>
                                         <td><input type="number" min="0" max="10"  name="SW1"/ value="10" size="3"></td>
-                                        <td><input type="number" min="0" max="20"  name="SW2"/ value="19" size="3"></td>
-                                        <td><input type="number" min="0" max="10"  name="SW3"/ value="6" size="3"></td>
                                         <td><input type="number" min="0" max="100"  name="Proj"/ value="95" size="3"></td>
                                         <td id="center-red">2.9</td>
                                         <td class="text-center">
@@ -273,10 +241,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td colspan="9">                                            
+                                        <td colspan="5">                                            
                                         </td>
                                         <td align="center">
-                                            <input type="submit" value="Update All" />
+                                            <input class="btn btn-success" type="submit" value="Update All" />
                                         </td>
                                     </tr>
                                 </tbody>
