--- a/war/project/add_student.html
+++ b/war/project/add_student.html
@@ -128,26 +128,26 @@
 
                         <form class="form-horizontal push-5-t" method="post" onsubmit="return false;">
                             <div class="form-group">
-                                <div class="col-xs-6">
+                                <div class="col-xs-3">
                                     <label for="register4-firstname">First Name</label>
-                                    <input class="form-control" type="text" id="register4-firstname" name="register4-firstname" placeholder="Enter student's first name..">
+                                    <input class="form-control" type="text" id="register4-firstname" name="register4-firstname" placeholder="First Name..">
                                 </div>                                            
                             </div>    
                             <div class="form-group">
-                                <div class="col-xs-6">
+                                <div class="col-xs-3">
                                     <label for="register4-lastname">Last Name</label>
-                                    <input class="form-control" type="text" id="register4-lastname" name="register4-lastname" placeholder="Enter student's last name..">
+                                    <input class="form-control" type="text" id="register4-lastname" name="register4-lastname" placeholder="Last Name..">
                                 </div>
                             </div> 
                             <div class="form-group">
-                                <div class="col-xs-6">
+                                <div class="col-xs-3">
                                     <label for="register4-course">Course</label>
                                     <input class="form-control" type="text" id="register4-course" name="register4-course"
-                                    placeholder="Enter student's course..">
+                                    placeholder="Course..">
                                 </div>
                             </div>  
                             <div class="form-group">
-                                <div class="col-xs-6">
+                                <div class="col-xs-3">
                                     <label for="register4-birthday">Birth Date</label>
                                     <input class="form-control" type="date" id="register4-birthday" name="register4-birthday">
                                 </div>
@@ -155,7 +155,7 @@
                                                                                                     
                             <div class="form-group">
                                 <div class="col-xs-12">
-                                    <button class="btn btn-sm btn-success" type="submit"><i class="fa fa-plus push-5-r"></i> Add Student</button>
+                                    <input class="btn btn-success" type="submit" value="Add Students" />
                                 </div>
                             </div>                                    
                     <br/>
